--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -98,7 +98,7 @@
         <ul class="nav nav-list">
             <li>
                 <a href="oa/apply.html">
-                    <span class="menu-text"> 员工报销申请 </span>
+                    <span class="menu-text"> 报销申请 </span>
                 </a>
             </li>
             <li>
@@ -134,19 +134,19 @@
             </li>
             <li>
                 <a href="javascript:void(0);">
-                    <span class="menu-text"> 我的审批 </span>
+                    <span class="menu-text"> 协同工作 </span>
                 </a>
                 <ul class="submenu" style="display:block">
                     <li>
                         <a href="oa/approve_todo.html">
                             <i class="icon-double-angle-right"></i>
-                            当前审批
+                            待办工作
                         </a>
                     </li>
                     <li>
                         <a href="oa/approve_history.html">
                             <i class="icon-double-angle-right"></i>
-                            历史审批
+                            已办事项
                         </a>
                     </li>
                     <li>
@@ -192,6 +192,7 @@
                 data: JSON.stringify(params),
                 success: function (resp) {
                     alert("切换成功!");
+                    SetCookie("un", resp.data);
                 	window.location.reload();
                 },
                 "error": function (jqxhr, textstatus, errorthrown) {
@@ -208,12 +209,33 @@
                 data: {},
                 success: function (resp) {
                     alert("退出成功!");
-                	window.location.reload();
+                    delCookie("un");
+                	window.location.href = '/oaengine/oa/index.html'; 
                 },
                 "error": function (jqxhr, textstatus, errorthrown) {
                     alert("退出成功!");
                 }
             });
+	}
+	function SetCookie(name,value)//两个参数，一个是cookie的名子，一个是值
+	{
+	    var Days = 30; //此 cookie 将被保存 30 天
+	    var exp  = new Date();    //new Date("December 31, 9998");
+	    exp.setTime(exp.getTime() + Days*24*60*60*1000);
+	    document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString();
+	}
+	function getCookie(name)//取cookies函数        
+	{
+	    var arr = document.cookie.match(new RegExp("(^| )"+name+"=([^;]*)(;|$)"));
+	     if(arr != null) return unescape(arr[2]); return null;
+	
+	}
+	function delCookie(name)//删除cookie
+	{
+	    var exp = new Date();
+	    exp.setTime(exp.getTime() - 1);
+	    var cval=getCookie(name);
+	    if(cval!=null) document.cookie= name + "="+cval+";expires="+exp.toGMTString();
 	}
 </script>
 
