--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -372,18 +372,18 @@
 
 </div>
 <div class="row">
-        <div style="float:right;margin-top:20px;margin-bottom:10px; margin-right:1%;">
+        <span style="float:right;margin-top:20px;margin-bottom:10px; margin-right:1%;">
+            <button class="btn btn-info" type="button"
+                    onclick="subTableInfos(false);">
+                <i class="icon-arrow-up bigger-110"></i>
+                暂存
+            </button>
             <button class="btn btn-info" type="button"
                     onclick="subTableInfos(true);">
                 <i class="icon-arrow-right bigger-110"></i>
                 保存并提交
             </button>
-            <button class="btn btn-info" type="button"
-                    onclick="subTableInfos(false);">
-                <i class="icon-arrow-up bigger-110"></i>
-                暂存草稿
-            </button>
-        </div>
+        </span>
 </div>
 
 <script src="/oaengine/static/js/utils.js"></script>
@@ -391,11 +391,12 @@
 <script src="/oaengine/static/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 
-	var formId = null;
+	var formId = "$formId";
+	var taskId = "$taskId";
+	var euid = "$euid";
     jQuery(function ($) {
         var url = location.search;
-        if (url.indexOf('formId') != -1) {
-            formId = url.split('=')[1];
+        if (formId != "") {
             createEditApplyTable(formId);
         } else {
             createNewAddApplyTable();
@@ -723,7 +724,7 @@
     function subTableInfos(flag) {
         var params = {};
         var vars = {};
-        if(formId != null){
+        if(formId != null && formId != ""){
         	vars["formId"] = formId;
         }
         for (var i = 1; i < 7; i++) {
@@ -807,7 +808,9 @@
             data: JSON.stringify(params),
             success: function (resp) {
                 if (resp.errorCode == 0) {
-                	if(flag){
+                	if(taskId != null && taskId != ""){
+                		approveProxy("oa/approve_endorse");
+                	}else if(flag){
                     	showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("创建报销申请成功！"), 300);
                     	window.location.href = '/oaengine/oa/apply_todo.html';
                     }else{
@@ -826,4 +829,37 @@
         })
     }
 
+	function approveProxy(url) {
+        var params = {};
+        var vars = {};
+        vars["formIds"] = formId;
+        vars["taskIds"] = taskId;
+        vars["memo"] = "";
+        vars["rtx_id"] = euid;
+        params["vars"] = vars;
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            url: url,
+            type: "post",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                var title_html_str = '';
+                try {
+                    if (resp.errorCode == 0) {
+                        showCommonNoticeDialog('处理成功', 'icon-warning-sign',
+                        generateNoticeMsg('处理成功'), 300);
+                		window.location.href = '/oaengine/oa/approve_todo.html';
+                    } else {
+                        showCommonNoticeDialog('处理失败', 'icon-warning-sign',
+                        generateNoticeMsg(resp.errorMessage), 300);
+                    }
+                } catch (e) {
+                }
+            },
+            "error": function (jqxhr, textstatus, errorthrown) {
+                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        });
+    }
 </script>
