--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -274,6 +274,11 @@
     }
 
     function approvePass(oTable) {
+    	if($("input:checked", oTable.fnGetNodes()).size()==0){
+    		showApproveResultDialog('审批', 'icon-lightbulb',
+                    generateNoticeMsg('请选择要审批的条目!'), 300);
+            return;
+    	}
         var url = "oa/approve_pass";
         var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
         try {
@@ -343,6 +348,11 @@
     }
 
     function approveReject(oTable) {
+    	if($("input:checked", oTable.fnGetNodes()).size()==0){
+    		showApproveResultDialog('审批', 'icon-lightbulb',
+                    generateNoticeMsg('请选择要审批的条目!'), 300);
+            return;
+    	}
         var url = "oa/approve_reject";
         var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
         try {
@@ -414,78 +424,12 @@
         }
     }
 
-    function approveBack(oTable) {
-        var url = "oa/approve_back";
-        var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
-        try {
-            $("#back-msg-dialog").empty();
-            $("#back-msg-dialog").append(createOperateMsgForm('Tips: 退回理由请不要超过100个字符'));
-            var dialog = $("#back-msg-dialog").removeClass('hide').dialog({
-                modal: true,
-                width: dialog_width,
-                height: 250,
-                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold"><li class="icon-user"></li> 退回理由</div>',
-                title_html: true,
-                closeOnEscape: false,
-                open: function (event, ui) {
-                    $(".ui-dialog-titlebar-close").hide();
-                },
-                buttons: [
-                    {
-                        id: "back-msg-submit",
-                        text: "提交",
-                        "class": "btn btn-primary btn-xs",
-                        click: function (e) {
-                            var Me = this;
-                            enableCurrentApproveToolbarButton(false);
-                            try {
-                                var this_form = $("#back-msg-dialog").find("form");
-                                var postData = this_form.serializeArray();
-                                var msg = "";
-                                for (var i in postData) {
-                                    if (postData[i]['name'] == 'msg') {
-                                        if (postData[i]['value'].length >= 100) {
-                                            enableAccountApplicationDialogButton(true);
-                                            showCommonNoticeDialog('退回理由错误', 'icon-warning-sign',
-                                                    generateNoticeMsg('退回理由不能超过100个字符'), 300);
-                                            return;
-                                        } else if (postData[i]['value'].length == 100) {
-                                            showCommonNoticeDialog('退回理由错误', 'icon-warning-sign',
-                                                    generateNoticeMsg('退回理由不能为空'), 300);
-                                            return;
-                                        } else {
-                                            msg = postData[i]['value'];
-                                            break;
-                                        }
-                                    }
-                                }
-                                approveProxy(oTable, url, msg, "退回");
-                                e.preventDefault(); //STOP default action
-                                $(this).dialog("close");
-                            } catch (e) {
-                                enableAccountApplicationDialogButton(true);
-                                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
-                                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
-                            }
-                        }
-                    },
-                    {
-                        id: "back-msg-cancel",
-                        text: "取消",
-                        "class": "btn btn-xs",
-                        click: function () {
-                            $(this).dialog("close");
-                        }
-                    }
-                ]
-            });
-        } catch (e) {
-            showCommonNoticeDialog('网络错误', 'icon-warning-sign',
-                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
-        }
-    }
-
     function approveEndorse(oTable) {
+    	if($("input:checked", oTable.fnGetNodes()).size()==0){
+    		showApproveResultDialog('审批', 'icon-lightbulb',
+                    generateNoticeMsg('请选择要审批的条目!'), 300);
+            return;
+    	}
         var url = "oa/approve_endorse";
         var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
         try {
@@ -725,18 +669,21 @@
         var needData = data.tableInfos;
         var d_len = needData.length;
         for (var i = 0; i < d_len; i++) {
+            var checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace"> <span class="lbl"></span></label>';
             var money = parseFloat(needData[i][4]);
             money /= 100;
             var map = "";
-            if(needData[i][6] == 'false'){
+            if(needData[i][7] == 'true'){
+            	map = $.parseStr("<a href='javascript:void(0);' " +
+            	"onclick='update(%s, %s, \"%s\");'><i class='icon-link'></i></a>", needData[i][0], needData[i][5], needData[i][8]);
+            	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" disabled> <span class="lbl"></span></label>';
+            }else if(needData[i][6] == 'false'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='showEditDialog(%s, %s);'><i class='icon-link'></i></a>", needData[i][0]);
-            }
-            if(needData[i][6] == 'true'){
+            }else if(needData[i][6] == 'true'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='edit(%s, %s);'><i class='icon-link'></i></a>", needData[i][0], needData[i][5]);
             }
-            var checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace"> <span class="lbl"></span></label>';
             var need_list = [checkbox, needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map];
             var d_list = [];
             for(j = 0; j < len; j++){
@@ -749,6 +696,10 @@
     
     function edit(formId, taskId) {
         window.location.href = "oa/apply_ratify.html?formId=" + formId + "&taskId=" + taskId;
+    }
+    
+    function update(formId, taskId, eu) {
+        window.location.href = "oa/apply.html?formId=" + formId + "&taskId=" + taskId + "&euid=" + eu;
     }
 
     function showTime() {
@@ -794,30 +745,5 @@
             }
         })
     }
-    //    function autoShowInfo(id, name) {
-    //        $('#rtx_id').autocomplete(
-    //                {
-    //                    source: function (request, response) {
-    //                        $.ajax({
-    //                             url: "/asset_info/auto/show",
-    //                            dataType: "json",
-    //                            type: "POST",
-    //                            data: {
-    //                                return_val: $('#rtx_id').val()
-    //                            },
-    //                            success: function (data) {
-    //                                response($.map(data, function (item) {
-    //                                    return item;
-    //                                }));
-    //                            }
-    //                        });
-    //                    },
-    //                    dataType: 'json',
-    //                    minChars: "2"
-    ////        select: function (e, ui) {
-    ////            location.href = "/user/" + ui.item.value;
-    ////        }
-    //                });
-    //    }
 
 </script>
