--- a/src/main/webapp/WEB-INF/vm/oa/index.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/index.vm
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>报销系统控制台</title>
+<title>Qunar 日常报销系统</title>
 <base href="/oaengine/"></base>
 </head>
 <body bgcolor="#FFFFFF">
@@ -12,6 +12,7 @@
 		src="https://qsso.corp.qunar.com/lib/qsso-auth.js?t=1">
 	</script>
 	<div align="center" style="margin-top:8%">
+	<form method="post" action="oa/login">
 	<table style="text-align: center;">
 		<tr>
 			<td colspan="2" height="100px">
@@ -20,14 +21,30 @@
 		</tr>
 		<tr>
 			<td height="40px"
-				style="font-size: 23px; text-align: center; font-weight: bolder; letter-spacing: 2px;" >报销系统控制台</td>
+				style="font-size: 23px; text-align: center; font-weight: bolder; letter-spacing: 2px;" >Qunar 日常报销系统</td>
 		</tr>
 		<tr>
 			<td style="font-size: 15px; text-align: center;">
-				<button id="qsso-login" class="qsso_button">QSSO登录</button>
+				$message
+			</td>
+		</tr>
+		<tr>
+			<td style="font-size: 15px; text-align: center;">
+				用户名:<input type="text" name="userName">
+			</td>
+		</tr>
+		<tr>
+			<td style="font-size: 15px; text-align: center;">
+				密&nbsp;&nbsp;码:<input type="password" name="password">
+			</td>
+		</tr>
+		<tr>
+			<td style="font-size: 15px; text-align: center;">
+				<input type="submit" value="登录">
 			</td>
 		</tr>
 	</table>
+	</form>
 	</div>
 	<script>
 		QSSO.attach('qsso-login', '$request.getContextPath()/oa/login');
