--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -251,7 +251,7 @@
         //alert(JSON.stringify(params));
         $.ajax({
             "contentType": "application/json; charset=utf-8",
-            "url": "approve_info",
+            "url": "oa/approve_info",
             "type": "POST",
             "data": JSON.stringify(params),
             success: function (resp) {
