--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -109,8 +109,7 @@
             {"sTitle": '申请人', "sClass": "center", "sWidth": 200},
             {"sTitle": '申请部门', "sWidth": 300, "sClass": "center"},
             {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
-            {"sTitle": '处理时间', "sClass": "center", "sWidth": 200},
-            {"sTitle": '金额', "sClass": "center", "sWidth": 150},
+            {"sTitle": '金额', "sClass": "center", "sWidth": 250},
             {"sTitle": "报销详情", "sClass": "center", "sWidth": 150}];
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
@@ -229,7 +228,7 @@
             money /= 100;
             var map = $.parseStr("<a href='javascript:void(0);' " +
             "onclick='showEditDialog(%s,%s);'><i class='icon-link'></i></a>", needData[i][0]);
-            aaData.push([needData[i][0], needData[i][1], needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map]);
+            aaData.push([needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map]);
         }
         return aaData;
     }
