--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -71,7 +71,7 @@
 </div>
 
 <div id="common-notice-dialog" class="hide"></div>
-
+<div id="apply-result-dialog" class="hide"></div>
 <script src="static/js/utils.js">
 </script>
 <script src="static/js/dialog_common.js">
@@ -120,13 +120,17 @@
             "sClass": "center"
         }, {
             "sTitle": "报销金额",
-            "sWidth": 250,
+            "sWidth": 150,
             "sClass": "center"
         }, {
             "sTitle": "报销详情",
             "sWidth": 50,
             "sClass": "center"
-        }];
+        }, {
+                "sTitle": "操作",
+                "sWidth": 100,
+                "sClass": "center"
+            }];
         var aoColumns = aoColumns2;
         if (num == 1) {
             aoColumns = aoColumns1.concat(aoColumns2);
@@ -236,10 +240,66 @@
             money /= 100;
             var map = $.parseStr("<a href='javascript:void(0);' " +
             "onclick='showEditDialog(%s);'><i class='icon-link'></i></a>", needData[i][0]);
-            aaData.push([needData[i][0], needData[i][1], money.toFixed(2), map]);
+            var colne = $.parseStr("<a href='javascript:void(0);' " +
+            "onclick='clone(%s);'>复制到我的草稿</a>", needData[i][0]);
+            aaData.push([needData[i][0], needData[i][1], money.toFixed(2), map, colne]);
         }
         return aaData;
     }
 
-
+	function clone(formId) {
+        var id = "apply-result-dialog";
+        var params = {};
+        var vars = {};
+        vars["formId"] = formId;
+        params["vars"] = vars;
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            url: "oa/clone",
+            type: "post",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                var title_html_str = '';
+                try {
+                    if (resp.errorCode == 0) {
+                        title_html_str = '<div class="dialog_title"><li class="icon-info-sign"></li> 复制到我的草稿</div>';
+                        var succeed_html = '<b><li class="icon-check"></li> 复制到我的草稿成功</b><br/>';
+                        $("#" + id).append(generateNoticeMsg(succeed_html));
+                    } else {
+                        title_html_str = '<div class="dialog_title"><li class="icon-exclamation-sign"></li>复制到我的草稿</div>';
+                        $("#" + id).append(generateNoticeMsg(resp.errorMessage));
+                    }
+                } catch (e) {
+                }
+                var dialog = $("#" + id).removeClass('hide').dialog({
+                    modal: true,
+                    width: 400,
+                    resizable: true,
+                    title: title_html_str,
+                    title_html: true,
+                    closeOnEscape: false,
+                    buttons: [
+                        {
+                            text: "确定",
+                            "class": "btn btn-primary btn-xs",
+                            click: function () {
+                                $("#" + id).empty();
+                                $("#" + id).dialog('destroy');
+                                window.location.href = '/oaengine/oa/draft.html';  
+                            }
+                        }
+                    ],
+                    close: function () {
+                        $("#").empty();
+                        $("#" + id).dialog('destroy');
+                    }
+                });
+            },
+            "error": function (jqxhr, textstatus, errorthrown) {
+                enableCurrentApproveToolbarButton(true);
+                showResultDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        });
+    }
 </script>
