--- a/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
@@ -127,7 +127,7 @@
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text" onblur="addMoney('table1')"></td>
                     <td><input type="text" ></td>
-                    <td><input type='text' value='' type='hidden'></td>
+                    <td><input value='' type='hidden'></td>
 
                 </tr>
             </table>
@@ -196,7 +196,7 @@
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text" onblur="addMoney('table2')"></td>
                     <td><input type="text"></td>
-                    <td><input type='text' value=''></td>
+                    <td><input type='hidden' value=''></td>
                 </tr>
             </table>
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
@@ -244,7 +244,7 @@
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text" onblur="addMoney('table3')"></td>
                     <td><input type="text"></td>
-                    <td><input type='text' value=''></td>
+                    <td><input type='hidden' value=''></td>
                 </tr>
             </table>
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
@@ -287,7 +287,7 @@
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text" onblur="addMoney('table4')"></td>
                     <td><input type="text"></td>
-                    <td><input type='text' value=''></td>
+                    <td><input type='hidden' value=''></td>
                 </tr>
             </table>
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
@@ -322,7 +322,7 @@
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text" onblur="addMoney('table5')"></td>
                     <td><input type="text"></td>
-                    <td><input type='text' value=''></td>
+                    <td><input type='hidden' value=''></td>
                 </tr>
             </table>
             <table style="border-collapse:collapse;" border="1" class="col-xs-12">
