--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -127,7 +127,7 @@
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" onblur="isNumber(this, '工时')"></td>
                     <td><input type="text" onblur="addMoney('table1')"></td>
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text"></td>
@@ -195,11 +195,11 @@
         </span></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                    <td><input type="text" onblur="avgMoney('table2', this)"></td>
-                    <td><input type="text" onblur="addMoney('table2')"></td>
-                    <td><input type="text" style="readonly:true" value=""></td>
-                    <td><input type="text" ></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" onblur="isNumber(this, '就餐人数');avgMoney('table2', this)"></td>
+                    <td><input type="text" onblur="javascript:addMoney('table2');avgMoney('table2', this)"></td>
+                    <td><input type="text" disabled="disabled" value=""></td>
+                    <td><input type="text" onblur="isNumber(this, '发票金额')"></td>
+                    <td><input type="text" onblur="isNumber(this, '工时')"></td>
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text"></td>
                     <td><input type='hidden' value=''></td>
@@ -248,7 +248,7 @@
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                    <td><input type="text"></td>
+                    <td><input type="text" onblur="isNumber(this, '参加人数')"></td>
                     <td><input type="text" onblur="addMoney('table3')"></td>
                     <td><input type="text" disabled="disabled"></td>
                     <td><input type="text"></td>
@@ -862,5 +862,13 @@
                         generateNoticeMsg('网络错误，请刷新后重试!'), 300);
             }
         });
+    }
+    
+    function isNumber(cell, field){
+    	if (!(/^(([1-9]\d*)|\d)(\.\d{1,2})?$/).test(cell.value)) {
+			alert(field + "格式错误");
+			cell.value = "";
+			return false;
+		}
     }
 </script>
