--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -673,16 +673,17 @@
             var money = parseFloat(needData[i][4]);
             money /= 100;
             var map = "";
-            if(needData[i][7] == 'true' || needData[i][9] == 'fin_check'){
+            if(needData[i][7] == 'true'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='update(%s, %s, \"%s\");'><i class='icon-link'></i></a>", needData[i][0], needData[i][5], needData[i][8]);
             	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" disabled> <span class="lbl"></span></label>';
             }else if(needData[i][6] == 'false'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='showEditDialog(%s, %s);'><i class='icon-link'></i></a>", needData[i][0]);
-            }else if(needData[i][6] == 'true'){
+            }else if(needData[i][6] == 'true' && needData[i][9] == 'fin_check'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='edit(%s, %s);'><i class='icon-link'></i></a>", needData[i][0], needData[i][5]);
+            	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" disabled> <span class="lbl"></span></label>';
             }
             var need_list = [checkbox, needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map];
             var d_list = [];
