--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -385,7 +385,7 @@
             </button>
         </span>
 </div>
-
+<div id="approve-msg-dialog" class="hide"></div>
 <script src="/oaengine/static/js/utils.js"></script>
 <script src="/oaengine/static/js/dialog_common.js"></script>
 <script src="/oaengine/static/My97DatePicker/WdatePicker.js"></script>
@@ -576,7 +576,7 @@
         $("#sum").val(vars["sum"]);
         $("#ratify").val(vars["ratify"]);
         $("#remark").val(vars["remark"]);
-
+		$("#payAmount").val(vars["payAmount"]);
     }
 
     function workHour(tableId, curRow) {
@@ -830,7 +830,8 @@
             success: function (resp) {
                 if (resp.errorCode == 0) {
                 	if(flag && taskId != null && taskId != ""){
-                		approveProxy("oa/approve_endorse");
+                		//approveProxy("oa/approve_endorse");
+                		approveEndorse();
                 	}else if(flag){
                     	showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("创建报销申请成功！"), 300);
                     	window.location.href = '/oaengine/oa/apply_todo.html';
@@ -854,13 +855,79 @@
             }
         })
     }
+    
+     function approveEndorse() {
+        var url = "oa/approve_endorse";
+        var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
+        try {
+            $("#approve-msg-dialog").empty();
+            var form = createOperateMsgForm('Tips: 备注不要超过100个字符');
+            $("#approve-msg-dialog").append(form);
+            var dialog = $("#approve-msg-dialog").removeClass('hide').dialog({
+                modal: true,
+                width: dialog_width,
+                height: 250,
+                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold">' +
+                '<li class="icon-user"></li> 备注</div>',
+                title_html: true,
+                closeOnEscape: false,
+                open: function (event, ui) {
+                    $(".ui-dialog-titlebar-close").hide();
+                },
+                buttons: [
+                    {
+                        id: "approve-msg-submit",
+                        text: "提交",
+                        "class": "btn btn-primary btn-xs",
+                        click: function (e) {
+                            try {
+                                var this_form = $("#approve-msg-dialog").find("form");
+                                var postData = this_form.serializeArray();
+                                var msg = "";
+                                for (var i in postData) {
+                                    if (postData[i]['name'] == 'msg') {
+                                        if (postData[i]['value'].length >= 100) {
+                                            enableAccountApplicationDialogButton(true);
+                                            showCommonNoticeDialog('备注错误', 'icon-warning-sign', generateNoticeMsg('备注不能超过100个字符'), 300);
+                                            return;
+                                        } else {
+                                            msg = postData[i]['value'];
+                                            break;
+                                        }
+                                    }
+                                }
+                                approveProxy(url, msg);
+                                e.preventDefault(); 
+                                $(this).dialog("close");
+                            } catch (e) {
+                                enableAccountApplicationDialogButton(true);
+                                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+                            }
+                        }
+                    },
+                    {
+                        id: "approve-msg-cancel",
+                        text: "取消",
+                        "class": "btn btn-xs",
+                        click: function () {
+                            $(this).dialog("close");
+                        }
+                    }
+                ]
+            });
+        } catch (e) {
+        	alert(e)
+            showCommonNoticeDialog('网络错误', 'icon-warning-sign', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+        }
+    }
 
-	function approveProxy(url) {
+	function approveProxy(url, memo) {
         var params = {};
         var vars = {};
         vars["formIds"] = formId;
         vars["taskIds"] = taskId;
-        vars["memo"] = "";
+        vars["memo"] = memo;
         vars["rtx_id"] = euid;
         params["vars"] = vars;
         $.ajax({
@@ -895,5 +962,15 @@
 			cell.value = "";
 			return false;
 		}
+    }
+    
+    function createOperateMsgForm(msg) {
+        var tips = msg;
+        var form = '<form style="width: 100%; background-color: white"> ';
+        form += '<div>';
+        form += $.parseStr('<textarea class="form-control" name="msg" style="height: 100px;" placeholder="%s"></textarea>', tips);
+        form += '</div>';
+        form += '</form>';
+        return form;
     }
 </script>
