--- a/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
@@ -41,14 +41,7 @@
                 </tr>
                 <tr>
                     <td>是否直接向VP汇报</td>
-                    <td>
-                        <form action="" method="get">
-                            <input disabled="disabled" name="Fruit" type="radio" checked="false" style="width:25% !important"
-                                   value="是"/><span style="width:10%">是</span>
-                            <input disabled="disabled" name="Fruit" type="radio" checked="true" style="width:25% !important"
-                                   value="否"/><span style="width:10%">否</<span>
-                        </form>
-                    </td>
+                    <td><input disabled="disabled" name="Fruit" type="radio" checked="false" style="width:25% !important" value="是"/><span style="width:10%">是</span><input disabled="disabled" name="Fruit" type="radio" checked="true" style="width:25% !important" value="否"/><span style="width:10%">否</<span></td>
                     <td>银行卡号</td>
                     <td><input type="text" readonly="readonly"></td>
                     <td>银行开户行</td>
@@ -460,7 +453,17 @@
                 if (isNull(value)) {
                     value = "";
                 }
-                table.rows[i].cells[j].childNodes[0].value = value;
+                if(i==2 && j==1){
+                	if(value == "是"){
+                		table.rows[i].cells[j].childNodes[0].checked = true;
+                		table.rows[i].cells[j].childNodes[2].checked = false;
+                	}else{
+                		table.rows[i].cells[j].childNodes[0].checked = false;
+                		table.rows[i].cells[j].childNodes[2].checked = true;
+                	}
+                }else{
+                	table.rows[i].cells[j].childNodes[0].value = value;
+                }
                 k++;
             }
         }
@@ -669,9 +672,9 @@
             for (j = 1; j < 6; j += 2) {
                 if ((i == 2 || i == 3) && j == 1) {
                 	console.log()
-                    var input = table.rows[i].cells[j].childNodes[1].childNodes;
-                    var input1 = input[1];
-                    var input2 = input[4];
+                    var input = table.rows[i].cells[j].childNodes;
+                    var input1 = input[0];
+                    var input2 = input[2];
                     if (input1.checked) {
                         list[0][k] = input1.value;
                     } else if (input2.checked) {
@@ -1110,13 +1113,13 @@
     }
     
     function payAmount(){
-    	var ratify = $("#ratify").val();
-    	var payAmount = $("#payAmount").val();
-    	if(payAmount <= 0 || payAmount==''){
+    	var ratify = parseFloat($("#ratify").val());
+    	var payAmount = parseFloat($("#payAmount").val());
+    	/*if(payAmount <= 0 || payAmount==''){
     		alert("支付金额不能等于0");
     		$("#payAmount").val("");
     		return false;
-    	}
+    	}*/
     	if(payAmount > ratify){
     		alert("支付金额不能大于核定总金额");
     		$("#payAmount").val("");
